--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "three": "^0.166.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app",
