--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
     "canvas": "^2.11.2",
     "flowbite": "^2.2.1",
     "framer-motion": "^11.0.3",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
